// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/versions/VersionsItemActions render should enable/disable actions and tooltips if isRetained is false 1`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle Actions Menu"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={true}
      isTabbable={false}
      position="middle-left"
      text={
        <FormattedMessage
          defaultMessage="Disabled by retention policy"
          id="be.sidebarVersions.disabledByRetention"
        />
      }
      theme="default"
    >
      <VersionsItemAction
        action="remove"
        isCurrent={false}
        isDisabled={false}
      >
        <IconTrash />
        <FormattedMessage
          defaultMessage="Delete"
          id="be.sidebarVersions.delete"
        />
      </VersionsItemAction>
    </Tooltip>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should enable/disable actions and tooltips if isRetained is true 1`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle Actions Menu"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={false}
      isTabbable={false}
      position="middle-left"
      text={
        <FormattedMessage
          defaultMessage="Disabled by retention policy"
          id="be.sidebarVersions.disabledByRetention"
        />
      }
      theme="default"
    >
      <VersionsItemAction
        action="remove"
        isCurrent={false}
        isDisabled={true}
      >
        <IconTrash />
        <FormattedMessage
          defaultMessage="Delete"
          id="be.sidebarVersions.delete"
        />
      </VersionsItemAction>
    </Tooltip>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on options 1`] = `
<DropdownMenu
  className="bcs-VersionsItemActions"
  constrainToScrollParent={true}
  constrainToWindow={true}
  isRightAligned={true}
  onMenuClose={[Function]}
>
  <PlainButton
    className="bcs-VersionsItemActions-toggle"
    data-resin-iscurrent={false}
    data-resin-target="overflow"
    onClick={[Function]}
    type="button"
  >
    <IconEllipsis
      height={4}
      width={14}
    />
    <FormattedMessage
      defaultMessage="Toggle Actions Menu"
      id="be.sidebarVersions.toggle"
    >
      <Component />
    </FormattedMessage>
  </PlainButton>
  <Menu
    className="bcs-VersionsItemActions-menu"
    data-resin-component="preview"
    data-resin-feature="versions"
    isHidden={false}
    isSubmenu={false}
  >
    <VersionsItemAction
      action="preview"
      isCurrent={false}
    >
      <IconOpenWith />
      <FormattedMessage
        defaultMessage="Preview"
        id="be.sidebarVersions.preview"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="download"
      isCurrent={false}
    >
      <IconDownload />
      <FormattedMessage
        defaultMessage="Download"
        id="be.sidebarVersions.download"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="promote"
      isCurrent={false}
    >
      <IconUpload />
      <FormattedMessage
        defaultMessage="Make Current"
        id="be.sidebarVersions.promote"
      />
    </VersionsItemAction>
    <VersionsItemAction
      action="restore"
      isCurrent={false}
    >
      <IconClockPast
        height={14}
        width={14}
      />
      <FormattedMessage
        defaultMessage="Restore"
        id="be.sidebarVersions.restore"
      />
    </VersionsItemAction>
    <Tooltip
      constrainToScrollParent={false}
      constrainToWindow={true}
      isDisabled={true}
      isTabbable={false}
      position="middle-left"
      text={
        <FormattedMessage
          defaultMessage="Disabled by retention policy"
          id="be.sidebarVersions.disabledByRetention"
        />
      }
      theme="default"
    >
      <VersionsItemAction
        action="remove"
        isCurrent={false}
        isDisabled={false}
      >
        <IconTrash />
        <FormattedMessage
          defaultMessage="Delete"
          id="be.sidebarVersions.delete"
        />
      </VersionsItemAction>
    </Tooltip>
  </Menu>
</DropdownMenu>
`;

exports[`elements/content-sidebar/versions/VersionsItemActions render should return the correct menu items based on options 2`] = `""`;
